--- a/htmls/edit_request.html
+++ b/htmls/edit_request.html
@@ -1,149 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Request - ServiceLink Admin Dashboard</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- FontAwesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="../styles/dashboard.css">
-  <style>
-    /* Adjust main content to account for the fixed sidebar */
-    .main-content {
-      margin-left: 16.67%; /* roughly equivalent to the 2-column sidebar width */
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edit Request</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <style>
+        body {
+            background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        .form-container {
+            max-width: 700px;
+            width: 100%;
+            padding: 30px;
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+        }
+        .form-container h2 {
+            color: #222831;
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
+        .form-floating label {
+            color: #6c757d;
+        }
+        .form-floating input,
+        .form-floating select {
+            border-radius: 10px;
+        }
+        .btn-custom {
+            width: 100%;
+            background-color: #007bff;
+            border: none;
+            padding: 12px;
+            font-size: 18px;
+            transition: 0.3s;
+            border-radius: 10px;
+        }
+        .btn-custom:hover {
+            background-color: #0056b3;
+        }
+        .selected-date {
+            display: inline-block;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            padding: 5px 10px;
+            background-color: #e9ecef;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-  <!-- Top Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid">
-      <!-- Brand Name -->
-      <a class="navbar-brand" href="../htmls/dashboard.html">
-        <i class="fas fa-link"></i> ServiceLink
-      </a>
-      <!-- Search Bar -->
-      <form class="d-flex mx-auto w-50">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      </form>
-      <!-- Navbar Links with Icons -->
-      <div class="navbar-nav ms-auto d-flex align-items-center gap-3">
-        <!-- Messages -->
-        <a class="nav-link position-relative text-white" href="#">
-          <i class="fas fa-envelope fs-5"></i>
-          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-            5
-          </span>
-        </a>
-        <!-- Notifications -->
-        <a class="nav-link position-relative text-white" href="#">
-          <i class="fas fa-bell fs-5"></i>
-          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-            3
-          </span>
-        </a>
-        <!-- Admin Profile -->
-        <a class="nav-link text-white" href="../htmls/profile.html">
-          <i class="fas fa-user-circle fs-4"></i>
-        </a>
-      </div>
-    </div>
-  </nav>
+    <div class="form-container">
+        <h2 class="text-center mb-4"><i class="bi bi-pencil-square"></i> Edit Service Request</h2>
 
-  <div class="container-fluid">
-    <div class="row">
-      <!-- Sidebar -->
-      <div class="col-md-2 p-3 vh-100 position-fixed sidebar">
-        <div class="d-flex flex-column">
-          <a class="nav-link text-white py-2 px-3 mb-3 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/dashboard.html">
-            <i class="fas fa-tachometer-alt me-2"></i> Dashboard
-          </a>
-          <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/providers.html">
-            <i class="fas fa-users me-2"></i> Providers
-          </a>
-          <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/beneficiaries.html">
-            <i class="fas fa-hand-holding-heart me-2"></i> Customers
-          </a>
-          <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/categories.html">
-            <i class="fas fa-tags me-2"></i> Categories
-          </a>
-          <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/requests.html">
-            <i class="fas fa-tags me-2"></i> Requests
-          </a>
-          <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/links.html">
-            <i class="fas fa-tags me-2"></i> Links
-          </a>
-          <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/settings.html">
-            <i class="fas fa-cog me-2"></i> Settings
-          </a>
-          <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/reports.html">
-            <i class="fas fa-chart-line me-2"></i> Reports
-          </a>
-          <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/logout.html">
-            <i class="fas fa-sign-out-alt me-2"></i> Logout
-          </a>
-        </div>
-      </div>
+        <div id="alertMessage" class="alert d-none" role="alert"></div>
+        <form id="editRequestForm" class="needs-validation" novalidate>
+            <input type="hidden" id="requestId">
 
-      <!-- Main Content -->
-      <div class="col-md-10 p-4 main-content">
-        <h2 class="mb-4">Edit Request</h2>
-        <div class="card">
-          <div class="card-header">
-            <strong>Edit Request Details</strong>
-          </div>
-          <div class="card-body">
-            <!-- Edit Request Form -->
-            <form id="editRequestForm">
-              <div class="row g-3">
-                <div class="col-md-6">
-                  <label for="userId" class="form-label">User ID</label>
-                  <input type="number" id="userId" class="form-control" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="serviceId" class="form-label">Service ID</label>
-                  <input type="number" id="serviceId" class="form-control" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="startDate" class="form-label">Start Date</label>
-                  <input type="date" id="startDate" class="form-control" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="endDate" class="form-label">End Date</label>
-                  <input type="date" id="endDate" class="form-control" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="requestDate" class="form-label">Request Date</label>
-                  <input type="date" id="requestDate" class="form-control" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="status" class="form-label">Status</label>
-                  <select id="status" class="form-select" required>
+            <!-- Beneficiary Display -->
+            <div class="form-floating mb-3">
+                <select class="form-select" id="beneficiarySelect" disabled>
+                    <option value="" selected disabled>Loading beneficiary...</option>
+                </select>
+                <label for="beneficiarySelect"><i class="bi bi-person"></i> Beneficiary</label>
+            </div>
+
+            <!-- Service Display -->
+            <div class="form-floating mb-3">
+                <select class="form-select" id="serviceSelect" disabled>
+                    <option value="" selected disabled>Loading service...</option>
+                </select>
+                <label for="serviceSelect"><i class="bi bi-tools"></i> Service</label>
+            </div>
+
+            <!-- Provider Display -->
+            <div class="form-floating mb-3">
+                <select class="form-select" id="providerSelect" disabled>
+                    <option value="" selected disabled>Loading provider...</option>
+                </select>
+                <label for="providerSelect"><i class="bi bi-person-workspace"></i> Provider</label>
+            </div>
+
+            <!-- Selected Dates Display -->
+            <div class="mb-3">
+                <label class="form-label"><i class="bi bi-calendar"></i> Selected Dates</label>
+                <div id="selectedDatesList" class="mt-2"></div>
+            </div>
+
+            <!-- Status Selection -->
+            <div class="form-floating mb-4">
+                <select class="form-select" id="statusSelect" required>
                     <option value="Pending">Pending</option>
-                    <option value="Approved">Approved</option>
+                    <option value="Accepted">Accepted</option>
                     <option value="Rejected">Rejected</option>
-                  </select>
-                </div>
-                <div class="col-12">
-                  <button type="submit" class="btn btn-primary">
-                    <i class="fas fa-save"></i> Save Changes
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-      <!-- End of Main Content -->
-    </div> <!-- End of row -->
-  </div> <!-- End of container-fluid -->
+                </select>
+                <label for="statusSelect"><i class="bi bi-list-check"></i> Status</label>
+            </div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Custom JS -->
-  <script src="../js/requests.js"></script>
+            <!-- Action Buttons -->
+            <div class="d-grid gap-2">
+                <div class="d-flex justify-content-between">
+                    <button type="button" id="deleteBtn" class="btn btn-danger">
+                        <i class="bi bi-trash"></i> Delete Request
+                    </button>
+                    <button type="submit" class="btn btn-custom">
+                        <i class="bi bi-save"></i> Save Changes
+                    </button>
+                </div>
+                <a href="requests.html" class="btn btn-outline-secondary">
+                    <i class="bi bi-arrow-left"></i> Back to List
+                </a>
+            </div>
+        </form>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
+    <script src="../js/edit_request.js"></script>
 </body>
 </html>
