--- a/htmls/add_provider.html
+++ b/htmls/add_provider.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../styles/dashboard.css">
     <style>
         body {
             background: linear-gradient(135deg, #f8f9fa, #e9ecef);
@@ -29,7 +30,7 @@
 
         }
         .form-container h2 {
-            color: #007bff;
+            color: #222831;
             margin-bottom: 20px;
             font-weight: bold;
         }
@@ -99,11 +100,13 @@
                 <div class="invalid-feedback">Please enter an address.</div>
             </div>
 
-            <!-- Services -->
+            <!-- Services Dropdown -->
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="providerServices" placeholder="Services" required>
-                <label for="services"><i class="bi bi-tools"></i> Services</label>
-                <div class="invalid-feedback">Please enter services.</div>
+                <select class="form-select" id="providerServices" required>
+                    <option value="" selected disabled>Loading services...</option>
+                </select>
+                <label for="providerServices"><i class="bi bi-tools"></i> Services</label>
+                <div class="invalid-feedback">Please select a service.</div>
             </div>
 
             <!-- Availability -->
