--- a/htmls/links.html
+++ b/htmls/links.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../styles/dashboard.css">
+    <!-- Flatpickr CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<!-- Flatpickr JS -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 <body>
     <!-- Top Navigation Bar -->
@@ -72,13 +76,19 @@
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/categories.html">
             <i class="fas fa-list-alt me-2"></i> Categories
         </a>
+        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/services.html">
+            <i class="fas fa-cogs me-2"></i> Services
+        </a>
         <!-- Updated Requests Icon -->
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/requests.html">
             <i class="fas fa-clipboard-list me-2"></i> Requests
         </a>
         <!-- Updated Links Icon -->
-        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link active animate__fadeInLeft" href="../htmls/links.html">
+        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link active animate__animated animate__fadeInLeft" href="../htmls/links.html">
             <i class="fas fa-link me-2"></i> Links
+        </a>
+        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/evaluations.html">
+            <i class="fas fa-star-half-alt me-2"></i> Ratings
         </a>
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/settings.html">
             <i class="fas fa-cog me-2"></i> Settings
@@ -92,59 +102,37 @@
     </div>
 </div>
 
-            <!-- Main Content -->
+ <!-- Main Content -->
 <div class="col-md-10 ms-auto p-4">
     <h2 class="mb-4 animate__animated animate__fadeInDown">Links Management</h2>
 
-    <!-- Search Bar and Add Provider Button -->
+    <!-- Search Bar and Add Link Button -->
     <div class="d-flex justify-content-between align-items-center mb-4 animate__animated animate__fadeInUp">
         <div class="input-group w-50">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search links...">
-            <button class="btn btn-primary">Search</button>
+            <input type="text" id="linkSearchInput" class="form-control" placeholder="Search links...">
+            <button class="btn btn-primary" id="linkSearchBtn">
+                <i class="bi bi-search"></i> Search
+            </button>
         </div>
-        <a href="addlink.html" class="btn btn-success">
-            <i class="bi bi-plus-lg"></i> Add Link
+        <a href="add_link.html" class="btn btn-success">
+            <i class="bi bi-plus-lg"></i> Add New Link
         </a>
     </div>
 
-    <!-- Providers Table -->
+    <!-- Links Table -->
     <div class="table-responsive animate__animated animate__fadeInUp">
-        <table class="table table-striped table-bordered">
+        <table class="table">
             <thead>
                 <tr>
-                    <th>Link ID</th>
-                    <th>User ID</th>
+                    <th>ID</th>
                     <th>Provider ID</th>
-                    <th>Service ID</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Linked Date</th>
+                    <th>Request ID</th>
+                    <th>Date</th>
                     <th>Status</th>
                     <th>Actions</th>
                 </tr>
             </thead>
-            <tbody id="providersTableBody">   
-                <tr id="noDataMessage">
-                    <td colspan="10" class="text-center">No link found</td>
-                </tr>       
-                 <!-- Example Data Row (Replace with dynamic content) -->
-                 <tr>
-                    <td>1</td>
-                    <td>10</td>
-                    <td>25</td>
-                    <td>5</td>
-                    <td>2025-03-10</td>
-                    <td>2025-03-20</td>
-                    <td>2025-03-09</td>
-                    <td>Active</td>
-                    <td>
-                        <button class="btn btn-warning btn-sm"><i class="bi bi-pencil"></i> Edit</button>
-                        <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i> Delete</button>
-                    </td>
-                </tr>
-                   
-                   
-            </tbody>
+            <tbody id="LinksTableBody"></tbody>
         </table>
     </div>
 </div>
