--- a/htmls/login.html
+++ b/htmls/login.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <div class="position-fixed top-0 start-0 w-100 h-100" style="z-index: -1; overflow: hidden; pointer-events: none;">
+        <div class="floating" style="position: absolute; top: 20%; left: 10%; width: 120px; height: 120px; background: rgba(255, 79, 0, 0.08); border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%; filter: blur(25px);"></div>
+        <div class="floating" style="position: absolute; top: 60%; left: 80%; width: 180px; height: 180px; background: rgba(255, 79, 0, 0.05); border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; filter: blur(30px); animation-delay: 0.5s;"></div>
+        <div class="floating" style="position: absolute; top: 30%; left: 70%; width: 100px; height: 100px; background: rgba(255, 79, 0, 0.06); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; filter: blur(20px); animation-delay: 1s;"></div>
+      </div>
     <div class="container d-flex justify-content-center align-items-center">
         <div class="card">
             <h2>Admin Login</h2>
