--- a/htmls/profile.html
+++ b/htmls/profile.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../styles/dashboard.css">
+   
+
     <!-- Animate.css for animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
    
@@ -57,7 +59,6 @@
     <div class="container-fluid">
         <div class="row">
             <!-- Sidebar -->
-            <!-- Sidebar -->
 <div class="col-md-2 p-3 vh-100 position-fixed sidebar">
     <div class="d-flex flex-column">
         <a class="nav-link text-white py-2 px-3 mb-3 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/dashboard.html">
@@ -70,8 +71,11 @@
             <i class="fas fa-hand-holding-heart me-2"></i> Customers
         </a>
         <!-- Updated Categories Icon -->
-        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link active animate__animated animate__fadeInLeft" href="../htmls/categories.html">
+        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/categories.html">
             <i class="fas fa-list-alt me-2"></i> Categories
+        </a>
+        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/services.html">
+            <i class="fas fa-cogs me-2"></i> Services
         </a>
         <!-- Updated Requests Icon -->
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/requests.html">
@@ -80,6 +84,9 @@
         <!-- Updated Links Icon -->
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/links.html">
             <i class="fas fa-link me-2"></i> Links
+        </a>
+        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/evaluations.html">
+            <i class="fas fa-star-half-alt me-2"></i> Ratings
         </a>
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/settings.html">
             <i class="fas fa-cog me-2"></i> Settings
@@ -94,7 +101,7 @@
 </div>
 
             <!-- Main Content -->
-            <div class="container my-5">
+            <div class="col-md-10 ms-auto p-4 animate__animated animate__fadeInDown">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
                         <div class="card profile-card">
@@ -122,28 +129,30 @@
                                 <form>
                                     <div class="mb-3">
                                         <label for="username" class="form-label"><i class="fas fa-user me-2"></i>Username</label>
-                                        <input type="text" class="form-control" id="username" value="nmaxwell">
+                                        <input type="text" class="form-control" id="username" value="Mohamed">
                                     </div>
                                     <div class="mb-3">
                                         <label for="name" class="form-label"><i class="fas fa-signature me-2"></i>Name</label>
-                                        <input type="text" class="form-control" id="name" value="Nelle Maxwell">
+                                        <input type="text" class="form-control" id="name" value="Mohamed Ait El Hadj">
                                     </div>
                                     <div class="mb-3">
                                         <label for="email" class="form-label"><i class="fas fa-envelope me-2"></i>Email</label>
-                                        <input type="email" class="form-control" id="email" value="nmaxwell@mail.com">
+                                        <input type="email" class="form-control" id="email" value="mohamedaitlhadj@gmail.com">
                                         <div class="alert alert-warning mt-2">
                                             <i class="fas fa-exclamation-circle me-2"></i>Your email is not confirmed. <a href="javascript:void(0)">Resend confirmation</a>
                                         </div>
                                     </div>
                                     <div class="mb-3">
                                         <label for="company" class="form-label"><i class="fas fa-building me-2"></i>Company</label>
-                                        <input type="text" class="form-control" id="company" value="Company Ltd.">
+                                        <input type="text" class="form-control" id="company" value="Company ServiceLink">
                                     </div>
         
                                     <!-- Save and Cancel Buttons -->
                                     <div class="text-end mt-4">
                                         <button type="button" class="btn btn-outline-secondary me-2">
-                                            <i class="fas fa-times me-2"></i>Cancel
+                                           <a href="../htmls/dashboard.html" class="fas fa-times me-2">
+                                            <i>Cancel</i>
+                                        </a>
                                         </button>
                                         <button type="submit" class="btn btn-primary">
                                             <i class="fas fa-save me-2"></i>Save Changes
@@ -155,6 +164,8 @@
                     </div>
                 </div>
             </div>
+
+           
         </div>
     </div>
 
