--- a/htmls/providers.html
+++ b/htmls/providers.html
@@ -24,10 +24,7 @@
                 <i class="fas fa-link"></i> ServiceLink
             </a>
 
-            <!-- Search Bar -->
-            <form class="d-flex mx-auto w-50">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            </form>
+            
 
             <!-- Navbar Links with Icons -->
             <div class="navbar-nav ms-auto d-flex align-items-center gap-3">
@@ -74,6 +71,9 @@
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/categories.html">
             <i class="fas fa-list-alt me-2"></i> Categories
         </a>
+        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/services.html">
+            <i class="fas fa-cogs me-2"></i> Services
+        </a>
         <!-- Updated Requests Icon -->
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/requests.html">
             <i class="fas fa-clipboard-list me-2"></i> Requests
@@ -81,6 +81,9 @@
         <!-- Updated Links Icon -->
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/links.html">
             <i class="fas fa-link me-2"></i> Links
+        </a>
+        <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/evaluations.html">
+            <i class="fas fa-star-half-alt me-2"></i> Ratings
         </a>
         <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/settings.html">
             <i class="fas fa-cog me-2"></i> Settings
@@ -100,8 +103,10 @@
     <!-- Search Bar and Add Provider Button -->
     <div class="d-flex justify-content-between align-items-center mb-4 animate__animated animate__fadeInUp">
         <div class="input-group w-50">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search providers...">
-            <button class="btn btn-primary">Search</button>
+            <input type="text" id="searchProviderInput" class="form-control" placeholder="Search providers...">
+            <button class="btn btn-primary" type="button" id="searchButton">
+                <i class="fas fa-search"></i>
+            </button>
         </div>
         <a href="add_provider.html" class="btn btn-success">
             <i class="bi bi-plus-lg"></i> Add Provider
