--- a/htmls/settings.html
+++ b/htmls/settings.html
@@ -22,10 +22,8 @@
                 <i class="fas fa-link"></i> ServiceLink
             </a>
 
-            <!-- Search Bar -->
-            <form class="d-flex mx-auto w-50">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            </form>
+           
+           
 
             <!-- Navbar Links with Icons -->
             <div class="navbar-nav ms-auto d-flex align-items-center gap-3">
@@ -67,14 +65,23 @@
                     <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/beneficiaries.html">
                         <i class="fas fa-hand-holding-heart me-2"></i> Customers
                     </a>
+                    <!-- Updated Categories Icon -->
                     <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/categories.html">
                         <i class="fas fa-list-alt me-2"></i> Categories
                     </a>
+                    <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/services.html">
+                        <i class="fas fa-cogs me-2"></i> Services
+                    </a>
+                    <!-- Updated Requests Icon -->
                     <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/requests.html">
                         <i class="fas fa-clipboard-list me-2"></i> Requests
                     </a>
+                    <!-- Updated Links Icon -->
                     <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/links.html">
                         <i class="fas fa-link me-2"></i> Links
+                    </a>
+                    <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link animate__animated animate__fadeInLeft" href="../htmls/evaluations.html">
+                        <i class="fas fa-star-half-alt me-2"></i> Ratings
                     </a>
                     <a class="nav-link text-white py-2 px-3 mb-2 rounded-3 sidebar-link active animate__animated animate__fadeInLeft" href="../htmls/settings.html">
                         <i class="fas fa-cog me-2"></i> Settings
@@ -188,6 +195,6 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="dashboard.js"></script>
+    <script src="../js/settings.js"></script>
 </body>
 </html>
