--- a/htmls/beneficiaries.html
+++ b/htmls/beneficiaries.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <!-- Top Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 
         <div class="container-fluid">
             <!-- Brand Name -->
@@ -104,10 +104,7 @@
                 <i class="fas fa-link"></i> ServiceLink
             </a>
 
-            <!-- Search Bar -->
-            <form class="d-flex mx-auto w-50">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            </form>
+           
 
             <!-- Navbar Links with Icons -->
             <div class="navbar-nav ms-auto d-flex align-items-center gap-3">
@@ -135,7 +132,7 @@
         </div>
     </nav>
 
-    <!-- Sidebar -->
+    
     <!-- Sidebar -->
 <div class="col-md-2 p-3 vh-100 position-fixed sidebar">
     <div class="d-flex flex-column">
