--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -160,8 +160,7 @@
                             <div class="card-body">
                                 <i class="fas fa-users metric-icon"></i>
                                 <h5 class="metric-title">Total Users</h5>
-                                <p class="metric-value" id="total-users">2,458</p>
-                                <div class="d-flex align-items-center">
+                                <p class="metric-value" id="total-users">2,013</p>                                <div class="d-flex align-items-center">
                                     <span class="badge bg-white text-primary me-2">+12%</span>
                                     <small>vs last month</small>
                                 </div>
@@ -419,6 +418,8 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- other section -->
+                         
                     </div>
                 </div>
             </main>
