--- a/htmls/services.html
+++ b/htmls/services.html
@@ -24,10 +24,7 @@
       <a class="navbar-brand" href="../htmls/dashboard.html">
         <i class="fas fa-link"></i> ServiceLink
       </a>
-      <!-- Search Bar -->
-      <form class="d-flex mx-auto w-50">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      </form>
+      
       <!-- Navbar Links with Icons -->
       <div class="navbar-nav ms-auto d-flex align-items-center gap-3">
         <!-- Messages -->
@@ -102,10 +99,9 @@
 <div class="d-flex justify-content-between align-items-center mb-4 animate__animated animate__fadeInUp">
   <div class="input-group w-50">
       <input type="text" id="searchServiceInput" class="form-control" placeholder="Search services...">
-    
-      <button class="btn btn-primary" type="button" id="searchServiceButton">
-          <i class="fas fa-search"></i>
-      </button>
+      <button class="btn btn-primary" type="button" id="searchButton">
+        <i class="fas fa-search"></i>
+    </button>
   </div>
   <a href="add_service.html" class="btn btn-success">
       <i class="fas fa-plus"></i> Add Service
