--- a/htmls/edit_provider.html
+++ b/htmls/edit_provider.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../styles/login.css">
     <style>
         body {
             background: linear-gradient(135deg, #f8f9fa, #e9ecef);
@@ -26,7 +27,7 @@
             box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
         }
         .form-container h2 {
-            color: #007bff;
+            color: #FF4F00;
             margin-bottom: 20px;
             font-weight: bold;
         }
@@ -39,7 +40,7 @@
         }
         .btn-custom {
             width: 100%;
-            background-color: #007bff;
+            background-color: #FF4F00;
             border: none;
             padding: 12px;
             font-size: 18px;
@@ -47,7 +48,7 @@
             border-radius: 10px;
         }
         .btn-custom:hover {
-            background-color: #0056b3;
+            background-color: #FF4F00;
         }
     </style>
 </head>
