--- a/htmls/edit_request.html
+++ b/htmls/edit_request.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../styles/login.css">
     <style>
         body {
             background: linear-gradient(135deg, #f8f9fa, #e9ecef);
@@ -40,7 +41,7 @@
         }
         .btn-custom {
             width: 100%;
-            background-color: #007bff;
+            background-color: #FF4F00;
             border: none;
             padding: 12px;
             font-size: 18px;
@@ -48,7 +49,7 @@
             border-radius: 10px;
         }
         .btn-custom:hover {
-            background-color: #0056b3;
+            background-color: #FF4F00;
         }
         .selected-date {
             display: inline-block;
