--- a/htmls/edit_service.html
+++ b/htmls/edit_service.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../styles/login.css">
     <style>
         body {
             background: linear-gradient(135deg, #f8f9fa, #e9ecef);
@@ -27,7 +28,7 @@
             margin: 0 auto;
         }
         .form-container h2 {
-            color: #007bff;
+          
             margin-bottom: 20px;
             font-weight: bold;
         }
@@ -41,7 +42,7 @@
         }
         .btn-custom {
             width: 100%;
-            background-color: #007bff;
+            background-color: #FF4F00;
             border: none;
             padding: 12px;
             font-size: 18px;
@@ -49,7 +50,7 @@
             border-radius: 10px;
         }
         .btn-custom:hover {
-            background-color: #0056b3;
+            background-color: #FF4F00;
         }
     </style>
 </head>
