--- a/htmls/evaluations.html
+++ b/htmls/evaluations.html
@@ -15,17 +15,14 @@
 </head>
 <body>
     <!-- Top Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
             <!-- Brand Name -->
             <a class="navbar-brand" href="../htmls/dashboard.html">
                 <i class="fas fa-link"></i> ServiceLink
             </a>
 
-            <!-- Search Bar -->
-            <form class="d-flex mx-auto w-50">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            </form>
+            
 
             <!-- Navbar Links with Icons -->
             <div class="navbar-nav ms-auto d-flex align-items-center gap-3">
