--- a/htmls/newpassword.html
+++ b/htmls/newpassword.html
@@ -68,6 +68,8 @@
             margin-top: 15px;
         }
     </style>
+    <link rel="stylesheet" href="../styles/login.css">
+    
 </head>
 
 <body>
